--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "Dylan Krupp <dykrupp@gmail.com>",
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.8.0",
     "gatsby": "^2.24.26",
     "gatsby-image": "^2.4.14",
     "gatsby-plugin-manifest": "^2.4.21",
@@ -12,6 +14,7 @@
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sharp": "^2.6.24",
     "gatsby-source-filesystem": "^2.3.23",
+    "gatsby-source-stripe": "^3.1.1",
     "gatsby-transformer-sharp": "^2.5.12",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
