--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "use-shopping-cart": "^2.1.0"
   },
   "devDependencies": {
     "@types/prop-types": "^15.7.3",
