--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-plugin-styled-components": "^1.11.1",
     "gatsby": "^2.24.47",
     "gatsby-image": "^2.4.16",
+    "gatsby-plugin-layout": "^1.3.10",
     "gatsby-plugin-manifest": "^2.4.23",
     "gatsby-plugin-material-ui": "^2.1.10",
     "gatsby-plugin-offline": "^3.2.23",
@@ -26,7 +27,6 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.1.1",
-    "use-persisted-state": "^0.3.0",
     "use-shopping-cart": "^2.1.0"
   },
   "devDependencies": {
@@ -35,9 +35,8 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-helmet": "^6.1.0",
     "@types/styled-components": "^5.1.2",
-    "@types/use-persisted-state": "^0.3.0",
-    "@typescript-eslint/eslint-plugin": "^3.9.0",
-    "@typescript-eslint/parser": "^3.9.0",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-react": "^1.1.7",
