--- a/package.json
+++ b/package.json
@@ -35,17 +35,26 @@
     "use-shopping-cart": "^2.1.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.10.4",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^10.4.9",
+    "@types/jest": "^26.0.12",
     "@types/prop-types": "^15.7.3",
     "@types/react": "^16.9.48",
     "@types/react-dom": "^16.9.8",
     "@types/react-helmet": "^6.1.0",
+    "@types/react-test-renderer": "^16.9.3",
     "@types/styled-components": "^5.1.2",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
+    "babel-jest": "^26.3.0",
+    "babel-preset-gatsby": "^0.5.8",
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-react": "^1.1.7",
     "eslint-plugin-prettier": "^3.1.4",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.4.2",
     "prettier": "^2.1.1",
     "typescript": "^4.0.2"
   },
@@ -57,6 +66,7 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "lint": "eslint ./src/**/*.{ts,tsx}",
-    "lint:fix": "eslint ./src/**/*.{ts,tsx} --fix"
+    "lint:fix": "eslint ./src/**/*.{ts,tsx} --fix",
+    "test": "jest"
   }
 }
