--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,9 +4,11 @@
       "plugin:react/recommended",
       "plugin:@typescript-eslint/recommended",
       "prettier/@typescript-eslint",
-      "plugin:prettier/recommended"
+      "plugin:prettier/recommended",
+      "plugin:testing-library/recommended",
+      "plugin:jest-dom/recommended",
     ],
-    "plugins": ["react", "@typescript-eslint", "prettier"],
+    "plugins": ["react", "@typescript-eslint", "prettier", "testing-library", "jest-dom"],
     "rules": {
       "prettier/prettier": ["error", { "singleQuote": true }]
     },
