--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-react": "^1.1.7",
+    "eslint-plugin-jest-dom": "^3.2.2",
     "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-testing-library": "^3.8.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.4.2",
     "prettier": "^2.1.1",
