--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,7 @@
       "prettier/@typescript-eslint",
       "plugin:prettier/recommended",
       "plugin:testing-library/recommended",
-      "plugin:jest-dom/recommended",
+      "plugin:jest-dom/recommended"
     ],
     "plugins": ["react", "@typescript-eslint", "prettier", "testing-library", "jest-dom"],
     "rules": {
