--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@typescript-eslint/parser": "^4.0.1",
     "babel-jest": "^26.3.0",
     "babel-preset-gatsby": "^0.5.8",
+    "cross-env": "^7.0.2",
     "eslint": "^7.8.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-react": "^1.1.7",
@@ -61,7 +62,7 @@
     "typescript": "^4.0.2"
   },
   "scripts": {
-    "build": "gatsby build",
+    "build": "cross-env GENERATE_SOURCEMAP=false gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
