--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "babel-jest": "^26.3.0",
     "babel-preset-gatsby": "^0.5.8",
     "cross-env": "^7.0.2",
+    "dotenv": "^8.6.0",
     "eslint": "^7.8.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-react": "^1.1.7",
